cteate flow-content to control spacing

--- a/main/index.html
+++ b/main/index.html
@@ -33,7 +33,7 @@
 
       </section>
 
-      <header class="header full-width col-content@sm">
+      <header class="header margin-top-menu full-width col-content@sm">
 
         <div class="carousel">
             <div class="slider">
@@ -157,7 +157,6 @@
                   <h3>Project Del Sol</h3>
                   <a class="link--subtle" href="portfolio.html">View All Projects</a>
                 </div>
-
               </div>
 
               <div class="project-card" id="project2">
