--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -34,10 +34,8 @@
         </div>
       </section>
 
-    </div>
 
-    <main class="portfolio">
-      <div class="container-outer">
+    <main class="portfolio margin-top-menu flow-content">
         <div class="project-cards">
 
           <div class="project-card" id="project1">
@@ -70,11 +68,99 @@
             </div>
           </div>
 
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
+              src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Project Del Sol</h3>
+              <p class="link--subtle">January 2016</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
+              src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Le Prototype</h3>
+              <p class="link--subtle">October 2015</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
+              src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>228B Tower</h3>
+              <p class="link--subtle">April 2015</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-edelweiss.jpg 294w, assets/images/portfolio/tablet/image-edelweiss.jpg 480w, assets/images/portfolio/mobile/image-edelweiss.jpg 250w"
+              src="assets/images/portfolio/mobile/image-edelweiss.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Grand Edelweiss Hotel</h3>
+              <p class="link--subtle">December 2013</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-netcry.jpg 294w, assets/images/portfolio/tablet/image-netcry.jpg 480w, assets/images/portfolio/mobile/image-netcry.jpg 250w"
+              src="assets/images/portfolio/mobile/image-netcry.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Netcry Tower</h3>
+              <p class="link--subtle">August 2012</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-hypers.jpg 294w, assets/images/portfolio/tablet/image-hypers.jpg 480w, assets/images/portfolio/mobile/image-hypers.jpg 250w"
+              src="assets/images/portfolio/mobile/image-hypers.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Hypers</h3>
+              <p class="link--subtle">January 2012</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-sxiv.jpg 294w, assets/images/portfolio/tablet/image-sxiv.jpg 480w, assets/images/portfolio/mobile/image-sxiv.jpg 250w"
+              src="assets/images/portfolio/mobile/image-sxiv.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>SXIV Tower</h3>
+              <p class="link--subtle">March 2011</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-trinity.jpg 294w, assets/images/portfolio/tablet/image-trinity.jpg 480w, assets/images/portfolio/mobile/image-trinity.jpg 250w"
+              src="assets/images/portfolio/mobile/image-trinity.jpg" alt="picture of hotel">
+            <div class=" text-component">
+              <h3>Trinity Bank Tower</h3>
+              <p class="link--subtle">September 2010</p>
+            </div>
+          </div>
+
+          <div class="project-card" id="project1">
+            <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+              srcset="assets/images/portfolio/desktop/image-paramour.jpg 294w, assets/images/portfolio/tablet/image-paramour.jpg 480w, assets/images/portfolio/mobile/image-paramour.jpg 250w"
+              src="assets/images/portfolio/mobile/image-paramour.jpg" alt="picture of hotel near water">
+            <div class="text-component">
+              <h3>Project Paramour</h3>
+              <p class="link--subtle">February 2008</p>
+            </div>
+          </div>
 
         </div>
-      </div>
     </main>
-
+  </div>
     <div class="container-outer">
       <footer class="footer full-width col-content@md">
         <div class="footer__container">
@@ -93,39 +179,4 @@
     <script src="assets/js/scripts.js"></script>
 
   </body>
-
-
-  Project Del Sol
-  January 2016
-
-  Le Prototype
-  October 2015
-
-  228B Tower
-  April 2015
-
-  Grand Edelweiss Hotel
-  December 2013
-
-  Netcry Tower
-  August 2012
-
-  Hypers
-  January 2012
-
-  SXIV Tower
-  March 2011
-
-  Trinity Bank Tower
-  September 2010
-
-  Project Paramour
-  February 2008
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio
-
 </html>
