use flow content

--- a/main/index.html
+++ b/main/index.html
@@ -114,7 +114,7 @@
 
 
     <main class="home">
-      <div class="container-outer">
+      <div class="container-outer flow-content">
 
         <section class="welcome">
           <div class="horizontal-line hide@sm"></div>
