complete underline menu item

--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -25,7 +25,7 @@
           <div class="nav-bar">
             <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
             <nav class="nav" id="nav-items" hidden>
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="portfolio.html" class="nav-link current">Portfolio</a>
               <a href="about.html" class="nav-link">About Us</a>
               <a href="contact.html" class="nav-link">Contact</a>
             </nav>
