--- a/main/about.html
+++ b/main/about.html
@@ -46,7 +46,7 @@
     <div class="container-outer flow-content">
 
     <section class="heritage">
-      <h1 class="two-lines">Our Heritage</h1>
+      <h1>Our <br/>Heritage</h1>
       <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
     relentless attention to detail turned Arch into one of the most sought after boutique
     firms in the country.
@@ -59,13 +59,13 @@
     </section>
 
     <section class="leaders">
-      <h2 class="two-lines margin-bottom-xl">The Leaders</h2>
+      <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
 
       <div class="cards">
 
         <div class="card">
-          <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img">
-          <h3>Jake Richards</h3>
+          <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
+          <h3 class="margin-top-lg">Jake Richards</h3>
           <p class="card__role">Chief Architect</p>
           <div class="social">
             <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -74,8 +74,8 @@
         </div>
 
         <div class="card">
-          <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img">
-          <h3>Jake Richards</h3>
+          <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
+          <h3 class="margin-top-lg">Jake Richards</h3>
           <p class="card__role">Head of Finance</p>
           <div class="social">
             <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -84,8 +84,8 @@
         </div>
 
         <div class="card">
-          <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img">
-          <h3>Jake Richards</h3>
+          <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
+          <h3 class="margin-top-lg">Jake Richards</h3>
           <p class="card__role">Lead Designer</p>
           <div class="social">
             <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -94,8 +94,8 @@
         </div>
 
         <div class="card">
-          <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img">
-          <h3>Jake Richards</h3>
+          <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
+          <h3 class="margin-top-lg">Jake Richards</h3>
           <p class="card__role">Senior Architect</p>
           <div class="social">
             <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
