fully functioning section with horizontal line

--- a/main/about.html
+++ b/main/about.html
@@ -20,7 +20,7 @@
       <div class="overlay hide@sm" aria-hidden="true"></div>
       <div class="container width-100%@sm">
         <div class="nav-bar">
-          <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
+          <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
           <nav class="nav" id="nav-items" hidden>
             <a href="portfolio.html" class="nav-link">Portfolio</a>
             <a href="about.html" class="nav-link">About Us</a>
@@ -34,7 +34,7 @@
     <header class="header margin-top-menu full-width col-content@sm">
       <div class="white-box"></div>
       <h1 class="text--huge display@sm">About</h1>
-      <h1>Your team of professionals</h1>
+      <h1 class="margin-bottom-sm">Your team of professionals</h1>
       <p>Our small team of world-class professionals will work with you every step of the way.
   Strong relationships are at the core of everything we do. This extends to the
   relationship our projects have with their surroundings.</p>
@@ -45,17 +45,28 @@
   <main>
     <div class="container-outer flow-content">
 
-    <section class="heritage">
-      <h1>Our <br/>Heritage</h1>
-      <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
-    relentless attention to detail turned Arch into one of the most sought after boutique
-    firms in the country.
+    <section class="heritage position-relative">
 
-    Specializing in Urban Design allowed us to focus on creating exceptional structures that
-    live in harmony with their surroundings. We consider every detail from every surrounding
-    element to inform our designs.
-
-    Our small team of world-class professionals provides input on every project.</p>
+      <div class="heritage__content">
+        <div class="horizontal-line"></div>
+        <h1 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h1>
+        <div class="text-component">
+          <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
+              relentless attention to detail turned Arch into one of the most sought after boutique
+              firms in the country.
+          </p>
+          <p>
+              Specializing in Urban Design allowed us to focus on creating exceptional structures that
+              live in harmony with their surroundings. We consider every detail from every surrounding
+              element to inform our designs.
+          </p>
+          <p>
+              Our small team of world-class professionals provides input on every project.
+          </p>
+      </div>
+      </div>
+      <div class="heritage__image">
+      </div>
     </section>
 
     <section class="leaders">
