--- a/main/index.html
+++ b/main/index.html
@@ -116,7 +116,7 @@
     <main class="home">
       <div class="container-outer flow-content">
 
-        <section class="welcome">
+        <section class="welcome position-relative">
           <div class="horizontal-line hide@sm"></div>
           <h1 class="text--huge display@sm">Welcome</h1>
           <div class="container width-100% container-width@md">
