complete hz line component

--- a/main/about.html
+++ b/main/about.html
@@ -45,8 +45,7 @@
   <main>
     <div class="container-outer flow-content">
 
-    <section class="heritage position-relative">
-
+    <section class="heritage">
       <div class="heritage__content">
         <div class="horizontal-line"></div>
         <h1 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h1>
