container working for menu

--- a/main/about.html
+++ b/main/about.html
@@ -1,7 +1,9 @@
+<!doctype html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
   <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
@@ -9,28 +11,25 @@
 </head>
 
 <body class="about">
-  <div class="container-outer">
-
-    <div class="vertical-content display@sm">
-      <div class="vertical-content__line"></div>
-      <div class="vertical-content__text text-uppercase">about</div>
-    </div>
 
     <section class="navigation">
-      <div class="overlay hide@sm" aria-hidden="true"></div>
-      <div class="container width-100%@sm">
-        <div class="nav-bar">
-          <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
-          <nav class="nav" id="nav-items" hidden>
-            <a href="portfolio.html" class="nav-link">Portfolio</a>
-            <a href="about.html" class="nav-link">About Us</a>
-            <a href="contact.html" class="nav-link">Contact</a>
-          </nav>
-          <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
+      <div class="container container--outer">
+        <div class="overlay hide@sm" aria-hidden="true"></div>
+          <div class="nav-bar">
+            <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
+            <nav class="nav" id="nav-items" hidden>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="about.html" class="nav-link">About Us</a>
+              <a href="contact.html" class="nav-link">Contact</a>
+            </nav>
+            <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
+          </div>
         </div>
       </div>
     </section>
 
+<!--
+  <div class="container container--outer">
     <header class="header margin-top-menu full-width col-content@sm">
       <div class="white-box"></div>
       <h1 class="text--huge display@sm">About</h1>
@@ -39,8 +38,10 @@
   Strong relationships are at the core of everything we do. This extends to the
   relationship our projects have with their surroundings.</p>
     </header>
-  </div>
+  </div> -->
 
+
+<!--
 
   <main>
     <div class="container-outer flow-content">
@@ -134,7 +135,7 @@
         <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
       </div>
     </footer>
-  </div>
+  </div> -->
 
   <script src="assets/js/scripts.js"></script>
   </body>
