working container with menu

--- a/main/about.html
+++ b/main/about.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
   <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
@@ -15,30 +16,31 @@
     <section class="navigation">
       <div class="container container--outer">
         <div class="overlay hide@sm" aria-hidden="true"></div>
-          <div class="nav-bar">
-            <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
-            <nav class="nav" id="nav-items" hidden>
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
-              <a href="about.html" class="nav-link">About Us</a>
-              <a href="contact.html" class="nav-link">Contact</a>
-            </nav>
-            <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
-          </div>
+        <div class="nav-bar">
+          <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
+          <nav class="nav" id="nav-items" hidden>
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+          </nav>
+          <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
+        </div>
         </div>
       </div>
     </section>
 
-<!--
-  <div class="container container--outer">
-    <header class="header margin-top-menu full-width col-content@sm">
-      <div class="white-box"></div>
+
+
+    <!-- <header class="header margin-top-menu">
+      <div class="container container--outer">
       <h1 class="text--huge display@sm">About</h1>
       <h1 class="margin-bottom-sm">Your team of professionals</h1>
       <p>Our small team of world-class professionals will work with you every step of the way.
   Strong relationships are at the core of everything we do. This extends to the
   relationship our projects have with their surroundings.</p>
+      </div>
     </header>
-  </div> -->
+
 
 
 <!--
