heritage section working

--- a/main/about.html
+++ b/main/about.html
@@ -29,49 +29,53 @@
       </div>
     </section>
 
-
-
-    <!-- <header class="header margin-top-menu">
+     <header class="header margin-top-menu">
+      <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
       <div class="container container--outer">
-      <h1 class="text--huge display@sm">About</h1>
-      <h1 class="margin-bottom-sm">Your team of professionals</h1>
-      <p>Our small team of world-class professionals will work with you every step of the way.
-  Strong relationships are at the core of everything we do. This extends to the
-  relationship our projects have with their surroundings.</p>
+        <div class="text-component">
+          <h1 class="text--huge display@sm">About</h1>
+          <h2 class="margin-bottom-sm">Your team of professionals</h2>
+          <p>Our small team of world-class professionals will work with you every step of the way.
+             Strong relationships are at the core of everything we do. This extends to the
+             relationship our projects have with their surroundings.
+          </p>
+        </div>
       </div>
     </header>
 
 
 
-<!--
-
   <main>
-    <div class="container-outer flow-content">
+    <div class="flow-content">
 
     <section class="heritage">
-      <div class="heritage__content">
-        <div class="horizontal-line"></div>
-        <h1 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h1>
-        <div class="text-component">
-          <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
-              relentless attention to detail turned Arch into one of the most sought after boutique
-              firms in the country.
-          </p>
-          <p>
-              Specializing in Urban Design allowed us to focus on creating exceptional structures that
-              live in harmony with their surroundings. We consider every detail from every surrounding
-              element to inform our designs.
-          </p>
-          <p>
-              Our small team of world-class professionals provides input on every project.
-          </p>
-      </div>
-      </div>
-      <div class="heritage__image">
+      <div class="container container--outer">
+        <div class="heritage__main">
+          <div class="heritage__content">
+            <div class="horizontal-line"></div>
+            <h2 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h2>
+            <div class="text-component">
+              <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
+                  relentless attention to detail turned Arch into one of the most sought after boutique
+                  firms in the country.
+              </p>
+              <p>
+                  Specializing in Urban Design allowed us to focus on creating exceptional structures that
+                  live in harmony with their surroundings. We consider every detail from every surrounding
+                  element to inform our designs.
+              </p>
+              <p>
+                  Our small team of world-class professionals provides input on every project.
+              </p>
+            </div>
+          </div>
+          <div class="heritage__image"></div>
+        </div>
+
       </div>
     </section>
 
-    <section class="leaders">
+    <!-- <section class="leaders">
       <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
 
       <div class="cards">
@@ -117,13 +121,13 @@
         </div>
       </div>
 
-    </section>
+    </section> -->
 
     </div>
 
   </main>
 
-  <div class="container-outer">
+  <!-- <div class="container-outer">
     <footer class="footer full-width col-content@md">
       <div class="footer__container">
         <div class="footer__logo">
