--- a/main/about.html
+++ b/main/about.html
@@ -75,7 +75,7 @@
       </div>
     </section>
 
-    <!-- <section class="leaders">
+    <section class="leaders">
       <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
 
       <div class="cards">
@@ -121,7 +121,7 @@
         </div>
       </div>
 
-    </section> -->
+    </section>
 
     </div>
 
