mobile section working for leaders and heritage

--- a/main/about.html
+++ b/main/about.html
@@ -32,9 +32,9 @@
      <header class="header margin-top-menu">
       <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
       <div class="container container--outer">
+        <h1 class="text--huge display@sm">About</h1>
         <div class="text-component">
-          <h1 class="text--huge display@sm">About</h1>
-          <h2 class="margin-bottom-sm">Your team of professionals</h2>
+          <h2r>Your team of professionals</h2r>
           <p>Our small team of world-class professionals will work with you every step of the way.
              Strong relationships are at the core of everything we do. This extends to the
              relationship our projects have with their surroundings.
@@ -48,80 +48,80 @@
   <main>
     <div class="flow-content">
 
-    <section class="heritage">
-      <div class="container container--outer">
-        <div class="heritage__main">
-          <div class="heritage__content">
-            <div class="horizontal-line"></div>
-            <h2 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h2>
-            <div class="text-component">
-              <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
-                  relentless attention to detail turned Arch into one of the most sought after boutique
-                  firms in the country.
-              </p>
-              <p>
-                  Specializing in Urban Design allowed us to focus on creating exceptional structures that
-                  live in harmony with their surroundings. We consider every detail from every surrounding
-                  element to inform our designs.
-              </p>
-              <p>
-                  Our small team of world-class professionals provides input on every project.
-              </p>
+      <section class="heritage">
+        <div class="container container--outer">
+          <div class="heritage__main">
+            <div class="heritage__content">
+              <div class="horizontal-line"></div>
+              <h2 class="margin-bottom-lg margin-bottom-xxs@md">Our <br/>Heritage</h2>
+              <div class="text-component">
+                <p> Founded in 2007, we started as a trio of architects. Our complimentary skills and
+                    relentless attention to detail turned Arch into one of the most sought after boutique
+                    firms in the country.
+                </p>
+                <p>
+                    Specializing in Urban Design allowed us to focus on creating exceptional structures that
+                    live in harmony with their surroundings. We consider every detail from every surrounding
+                    element to inform our designs.
+                </p>
+                <p>
+                    Our small team of world-class professionals provides input on every project.
+                </p>
+              </div>
+            </div>
+            <div class="heritage__image"></div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="leaders">
+        <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
+
+        <div class="cards">
+
+          <div class="card">
+            <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
+            <h3 class="margin-top-lg">Jake Richards</h3>
+            <p class="card__role">Chief Architect</p>
+            <div class="social">
+              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+              <a href="twitter.com"><img src="assets/images/icons/icon-twitter.svg" alt="twitter icon"></a>
             </div>
           </div>
-          <div class="heritage__image"></div>
-        </div>
 
-      </div>
-    </section>
+          <div class="card">
+            <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
+            <h3 class="margin-top-lg">Jake Richards</h3>
+            <p class="card__role">Head of Finance</p>
+            <div class="social">
+              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+            </div>
+          </div>
 
-    <section class="leaders">
-      <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
+          <div class="card">
+            <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
+            <h3 class="margin-top-lg">Jake Richards</h3>
+            <p class="card__role">Lead Designer</p>
+            <div class="social">
+              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+            </div>
+          </div>
 
-      <div class="cards">
-
-        <div class="card">
-          <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
-          <h3 class="margin-top-lg">Jake Richards</h3>
-          <p class="card__role">Chief Architect</p>
-          <div class="social">
-            <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-            <a href="twitter.com"><img src="assets/images/icons/icon-twitter.svg" alt="twitter icon"></a>
+          <div class="card">
+            <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
+            <h3 class="margin-top-lg">Jake Richards</h3>
+            <p class="card__role">Senior Architect</p>
+            <div class="social">
+              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+            </div>
           </div>
         </div>
 
-        <div class="card">
-          <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
-          <h3 class="margin-top-lg">Jake Richards</h3>
-          <p class="card__role">Head of Finance</p>
-          <div class="social">
-            <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-            <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
-          <h3 class="margin-top-lg">Jake Richards</h3>
-          <p class="card__role">Lead Designer</p>
-          <div class="social">
-            <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-            <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
-          <h3 class="margin-top-lg">Jake Richards</h3>
-          <p class="card__role">Senior Architect</p>
-          <div class="social">
-            <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-            <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
-          </div>
-        </div>
-      </div>
-
-    </section>
+      </section>
 
     </div>
 
