--- a/main/about.html
+++ b/main/about.html
@@ -34,7 +34,7 @@
       <div class="container container--outer">
         <h1 class="text--huge display@sm">About</h1>
         <div class="text-component">
-          <h2r>Your team of professionals</h2r>
+          <h2>Your team of professionals</h2>
           <p>Our small team of world-class professionals will work with you every step of the way.
              Strong relationships are at the core of everything we do. This extends to the
              relationship our projects have with their surroundings.
@@ -76,55 +76,56 @@
       </section>
 
       <section class="leaders">
-        <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
+        <div class="container container--outer">
+          <div class="leaders__main">
+            <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
+            <div class="cards">
 
-        <div class="cards">
+              <div class="card">
+                <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
+                <h3 class="margin-top-lg">Jake Richards</h3>
+                <p class="card__role">Chief Architect</p>
+                <div class="social">
+                  <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+                  <a href="twitter.com"><img src="assets/images/icons/icon-twitter.svg" alt="twitter icon"></a>
+                </div>
+              </div>
 
-          <div class="card">
-            <img src="assets/images/about/desktop/avatar-jake.jpg" alt="face of Jake" class="card__img width-100%">
-            <h3 class="margin-top-lg">Jake Richards</h3>
-            <p class="card__role">Chief Architect</p>
-            <div class="social">
-              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-              <a href="twitter.com"><img src="assets/images/icons/icon-twitter.svg" alt="twitter icon"></a>
-            </div>
-          </div>
+              <div class="card">
+                <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
+                <h3 class="margin-top-lg">Jake Richards</h3>
+                <p class="card__role">Head of Finance</p>
+                <div class="social">
+                  <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+                  <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+                </div>
+              </div>
 
-          <div class="card">
-            <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
-            <h3 class="margin-top-lg">Jake Richards</h3>
-            <p class="card__role">Head of Finance</p>
-            <div class="social">
-              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
-            </div>
-          </div>
+              <div class="card">
+                <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
+                <h3 class="margin-top-lg">Jake Richards</h3>
+                <p class="card__role">Lead Designer</p>
+                <div class="social">
+                  <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+                  <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+                </div>
+              </div>
 
-          <div class="card">
-            <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
-            <h3 class="margin-top-lg">Jake Richards</h3>
-            <p class="card__role">Lead Designer</p>
-            <div class="social">
-              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
-            </div>
-          </div>
-
-          <div class="card">
-            <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
-            <h3 class="margin-top-lg">Jake Richards</h3>
-            <p class="card__role">Senior Architect</p>
-            <div class="social">
-              <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
-              <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+              <div class="card">
+                <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
+                <h3 class="margin-top-lg">Jake Richards</h3>
+                <p class="card__role">Senior Architect</p>
+                <div class="social">
+                  <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
+                  <img src="assets/images/icons/icon-twitter.svg" alt="twitter icon">
+                </div>
+              </div>
             </div>
           </div>
         </div>
-
       </section>
 
     </div>
-
   </main>
 
   <!-- <div class="container-outer">
